# aoc2023

./: .gitignore  CMakeLists.txt  main.c
compat/: compat.c  compat.h
day1/: day1.c  day1.h
day2/: day2.c  day2.h
day3/: day3.c  day3.h
day4/: day4.c  day4.h
day5/: day5.c  day5.h
day6/: day6.c  day6.h
day7/: day7.c  day7.h
day8/: day8.c  day8.h
day9/: day9.c  day9.h
